# realworld-axum-betashuttle

./: .gitignore  Cargo.toml  Makefile.toml  README.md  http  openapi.yml
.sqlx/: query-1537f89af943f57e3d8a0c39fddbcc797a151960f7ec0474744628f11711007a.json  query-161d7103c317dd06ea6fafda34f500e1a9aa06b780f415f44662b8edf9761cb7.json  query-2487346f1ed40518d7942f83bccb1d63471375271620b55fa7a8b58314057b36.json  query-27b659ad27cfcd49b9fce0115780da25af1ab12137a8962c6fff951226714e6a.json  query-5731449ff4dc9d291c464429c9cf85787f104e0a75f4e3c542272ff39df2e313.json  query-7485d1123dc48182956e57d6d5fea4581dbd6f0e0308ed65d94f453f57db531f.json  query-7cdf91e1d0d8400f6768d532c761712efe99b8eb044d0939708a6d81bd5e423c.json  query-ba3ae04bd8ceae08141cb81b9653a9677f776f2f20f286d2f81bf57129ff1170.json  query-d865546a6044baff0adbd39834272db0431d28da35510d860377ec2e7a9bcd46.json  query-e33f06e1107ee8a7542284d4b34b8d521f59edc2f2bfaf0f729ac3b513b5beb2.json
migrations/: 20240920044759_setup.down.sql  20240920044759_setup.up.sql  20240920045714_users.down.sql  20240920045714_users.up.sql  20240927020645_user_follow.down.sql  20240927020645_user_follow.up.sql  20241010071015_articles.down.sql  20241010071015_articles.up.sql  20241014125500_favorites.down.sql  20241014125500_favorites.up.sql
src/: core.rs  dao.rs  dyn_objects.rs  endpoints.rs  error.rs  extractor.rs  jwt.rs  lib.rs  main.rs
src/core/: README.md  (+3 more)
tests/: api_test.rs  articles.http  favorites.http  follow_getProfile_unfollow.http  http  user_create_get_login_update.http  user_create_get_update-with-password_login.http  (+1 more)
(+40 files in other folders)
