[package]
name = "realworld-axum-betashuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = { git = "https://github.com/shuttle-hq/shuttle" }
shuttle-runtime = { git = "https://github.com/shuttle-hq/shuttle" }
# do the same for all other shuttle crates
tokio = "1.28.2"
